# msme_env

./: .gitattributes  .gitignore  Blog.MD  Dockerfile  FAQ_MAPPING.md  README.md  __init__.py  architecture.md  client.py  eval.py  inference.ipynb  mapping.md  memory.py  message_generator.py  models.py  network.py  openenv.yaml  probe_hf.py  pyproject.toml  reward.py  reward_audit.py  train_colab.ipynb  train_grpo.py  world_generator.py
.github/workflows/: sync.yml
artifacts/: eval_report.json  eval_report_smoke.json  eval_result.json
claude code files/: README.md  __init__.py  adapter.py  app.py  base.py  client.py  environment.py  models.py  openenv.yaml  pyproject.toml
claude code files/mnt/user-data/outputs/linguistic_decoding/: __init__.py
docs/: VIDEO_SCRIPT.md  hf_blog_post.md
domains/: __init__.py  base.py
domains/msme_startup/: __init__.py  adapter.py
openenv_msmeEnv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
req/: Hackathon FAQs (participants) (1).docx  Hackathon FAQs (participants).docx  Important points to refer from the live QnA.docx  README (1).md  [External] Apr ‘26 OpenEnv Hackathon Themes & Judging Criteria.docx  [External] Meta OpenEnv Hackathon Participant Help Guide.docx  baseline_rewards.json  baseline_rewards_smoke.json  deterministic_eval.json  deterministic_eval_smoke.json  deterministic_eval_smoke_patch (1).json  eval_report.json  judging req.docx  winners.docx
scripts/: check_domain_registry.py  eval.py  generate_judge_artifacts.py  grpo_minimal.py  inference_before_after.py  make_hero.py  pre_submit_check.py  run_baseline_eval.py  run_deterministic_eval.py  score_checkpoints.py
server/: Dockerfile  __init__.py  app.py  msmeEnv_environment.py  requirements.txt
server/static/: app.js  index.html  styles.css
server/ui/: training_log.txt
server/web/: index.html
server/web/assets/: app.js  styles.css
tests/: test_domain_registry.py
ui/: app.js  index.html  styles.css
