# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-msmeEnv"
version = "0.1.0"
description = "Msmeenv environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies for MSME-RL
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "transformers>=5.6.2",
    "datasets>=2.20.0",
    "trl>=0.9.6",
    "torch>=2.11.0",
    "accelerate>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "msmeEnv",
    "msmeEnv.server",
    "msmeEnv.domains",
    "msmeEnv.domains.msme_startup",
]
package-dir = {
    "msmeEnv" = ".",
    "msmeEnv.server" = "server",
    "msmeEnv.domains" = "domains",
    "msmeEnv.domains.msme_startup" = "domains/msme_startup",
}
